# EntityPivotingEngine

./: CMakeLists.txt  README.md
src/: database.cpp  database.hpp  dns_fetcher.cpp  dns_fetcher.hpp  exporter.cpp  exporter.hpp  main.cpp
tests/: test_dns_fetcher.cpp  test_init.cpp
